实现微信6.0主界面的交互和效果

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,9 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="mainBottomNav">
+        <item name="android:layout_weight">1</item>
+        <item name="android:padding">5dip</item>
+    </style>
+
 </resources>
