引入Android5.0 新控件CardView的功能和效果，但是运行起来报错。由于cardView的R文件引入有点问题

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="button_elevation">2dp</dimen>
 
     <dimen name="button_press_elevation">4dp</dimen>
+
+    <dimen name="seekbar_label_length">70dp</dimen>
 </resources>
