--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,49 @@
     <color name="cardview_light_background">#FFFAFAFA</color>
     <color name="cardview_shadow_end_color">#03000000</color>
     <color name="cardview_shadow_start_color">#37000000</color>
+
+    <!-- basic colors -->
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="blue">#0000FF</color>
+    <color name="red">#ff0000</color>
+    <color name="transparent">#00000000</color>
+
+    <!-- logo colors -->
+    <color name="logo_blue">#1472b9</color>
+    <color name="logo_green">#14b440</color>
+    <color name="logo_green_light">#4414b440</color>
+
+    <!-- font colors -->
+    <color name="font_black">#333333</color>
+    <color name="font_gray">#999999</color>
+    <color name="font_gray_desc">#666666</color>
+    <color name="font_hint">#cecece</color>
+    <color name="font_red">#f55050</color>
+
+    <!-- gray colors -->
+    <color name="gray_light_bg_main">#e0e0e0</color>
+    <color name="gray_bg_actionbar">#eeeeee</color>
+    <color name="gray_dialog_btn">#f2f2f2</color>
+    <color name="gray_dialog_btn_pressed">#e9e9e9</color>
+    <color name="gray_line">#dfdfdf</color>
+
+    <!-- bg colors -->
+    <color name="bg_main_gray">#F8F8F8</color>
+    <color name="bg_title_bar">#16b6f6</color>
+    <color name="bg_item_bar">#f4f4f4</color>
+
+    <!-- line colors -->
+    <color name="line_color">#dfdfdf</color>
+    <color name="tv_login_disable_color">#70d1ff</color>
+    <color name="lv_item_top_bottom_line_color">#dcdcdc</color>
+
+    <!-- blue colors -->
+    <color name="blue_about">#016e95</color>
+
+    <!-- verify_code_btn -->
+    <color name="get_verify_code_pressed">#26e25f</color>
+    <color name="get_verify_code_disable">#e0e0e0</color>
+    <color name="get_verify_code">#14b440</color>
+
 </resources>
