--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -64,4 +64,9 @@
     <color name="get_verify_code_disable">#e0e0e0</color>
     <color name="get_verify_code">#14b440</color>
 
+
+    <color name="header_normal">#ffe74c3c</color>
+    <color name="header_pressed">#ffc0392b</color>
+    <color name="menu_section_header">#FFDDDDDD</color>
+
 </resources>
