--- a/app/src/main/res/menu/menu_app.xml
+++ b/app/src/main/res/menu/menu_app.xml
@@ -24,5 +24,5 @@
         android:id="@+id/menu_settings"
         android:icon="@drawable/action_bar_icon_settings"
         android:title="Settings"
-        app:showAsAction="ifRoom|withText" />
+        app:showAsAction="always" />
 </menu>
