--- a/app/src/main/res/layout/activity_main_toggle_btn.xml
+++ b/app/src/main/res/layout/activity_main_toggle_btn.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ly.cc.fragment.custcollect.toggleBtn.MainActivity">
+    tools:context="com.ly.cc.fragment.custcollect.toggleBtn.ToggleBtnMainActivity">
 
     <com.ly.cc.custview.toggleButton.ToggleButton
         android:layout_width="54dp"
