--- a/app/src/main/res/layout/activity_swipe_list_view.xml
+++ b/app/src/main/res/layout/activity_swipe_list_view.xml
@@ -24,7 +24,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.ly.cc.custview.swipeListView.SwipeListView
+    <com.ly.cc.custview.listview.swipeListView.SwipeListView
         xmlns:swipe="http://schemas.android.com/apk/res-auto"
         android:id="@+id/example_lv_list"
         android:listSelector="#00000000"
