--- a/app/src/main/res/layout/activity_timeline_list.xml
+++ b/app/src/main/res/layout/activity_timeline_list.xml
@@ -6,12 +6,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ly.cc.fragment.custcollect.listview.ListViewBothActivity">
+    tools:context="com.ly.cc.fragment.custcollect.timeline.TimelineListActivity">
 
-    <com.ly.cc.custview.listview.pullRefresh.PullToRefreshListView
-        android:id="@+id/lv_county"
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_world" />
-
+        android:layout_height="match_parent" />
 </RelativeLayout>
