--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -17,15 +17,21 @@
 
         <attr name="leftText" format="string" />
         <attr name="leftTextSize" format="dimension" />
-        <attr name="leftTextColor" format="reference|color" />
+        <attr name="leftTextColor" format="color" />
+        <attr name="leftBackground" format="reference|color" />
+        <attr name="leftVisible" format="boolean" />
 
         <attr name="rightText" format="string" />
         <attr name="rightTextSize" format="dimension" />
         <attr name="rightTextColor" format="reference|color" />
+        <attr name="rightBackground" format="reference|color" />
+        <attr name="rightVisible" format="boolean" />
 
         <attr name="centerText" format="string" />
         <attr name="centerTextSize" format="dimension" />
         <attr name="centerTextColor" format="color" />
+        <attr name="centerBackground" format="reference|color" />
+        <attr name="centerVisible" format="boolean" />
 
     </declare-styleable>
 </resources>
