完成QQ5.0侧滑菜单效果

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -34,4 +34,9 @@
         <attr name="centerVisible" format="boolean" />
 
     </declare-styleable>
+
+    <declare-styleable name="slidingMenu">
+        <attr name="rightPadding" format="dimension"/>
+    </declare-styleable>
+
 </resources>
