--- a/app/src/main/res/layout/activity_slide_menu_qq5.xml
+++ b/app/src/main/res/layout/activity_slide_menu_qq5.xml
@@ -1,12 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:leeeyou="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.ly.cc.fragment.custcollect.slidemenu.SlideMenuQQ5Activity">
 
     <com.ly.cc.custview.slidemenu.SlidingMenuQQ5
+        android:id="@+id/slidingMenu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/img_frame_background"
+        leeeyou:rightPadding="100dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -18,7 +22,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/qq"></LinearLayout>
+                android:background="@drawable/qq">
+
+                <Button
+                    android:id="@+id/btn_toggle_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="toggle" />
+            </LinearLayout>
         </LinearLayout>
     </com.ly.cc.custview.slidemenu.SlidingMenuQQ5>
 </RelativeLayout>
