--- a/app/src/main/res/layout/activity_image_painting.xml
+++ b/app/src/main/res/layout/activity_image_painting.xml
@@ -28,6 +28,21 @@
             leeeyou:borderRadius="60dp"
             leeeyou:type="round" />
 
+        <com.ly.cc.custview.imagePainting.RoundImageView
+            android:id="@+id/riv_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:src="@drawable/roundimage2"
+            leeeyou:borderRadius="60dp"
+            leeeyou:type="round" />
+
+        <com.ly.cc.custview.imagePainting.RoundImageView
+            android:id="@+id/riv_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:src="@drawable/roundimage1" />
 
     </LinearLayout>
 </ScrollView>
