--- a/app/src/main/res/layout/activity_list_view_header.xml
+++ b/app/src/main/res/layout/activity_list_view_header.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.ly.cc.fragment.custcollect.listview.ListViewHeaderActivity">
+    tools:context="com.ly.cc.view.custcollect.listview.ListViewHeaderActivity">
 
     <se.emilsjolander.stickylistheaders.StickyListHeadersListView
         android:id="@+id/list"
