--- a/app/src/main/res/layout/activity_list_view_both.xml
+++ b/app/src/main/res/layout/activity_list_view_both.xml
@@ -3,7 +3,7 @@
     xmlns:topTitle="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ly.cc.fragment.custcollect.listview.ListViewBothActivity">
+    tools:context="com.ly.cc.view.custcollect.listview.ListViewBothActivity">
 
     <com.ly.cc.custview.topview.TopBarView
         android:id="@+id/mTopBar"
