--- a/app/src/main/res/layout/activity_slide_menu_qq5.xml
+++ b/app/src/main/res/layout/activity_slide_menu_qq5.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ly.cc.fragment.custcollect.slidemenu.SlideMenuQQ5Activity">
+    tools:context="com.ly.cc.view.custcollect.slidemenu.SlideMenuQQ5Activity">
 
     <com.ly.cc.custview.slidemenu.SlidingMenuQQ5
         android:id="@+id/slidingMenu"
