--- a/app/src/main/res/layout/activity_vertical_timeline.xml
+++ b/app/src/main/res/layout/activity_vertical_timeline.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ly.cc.fragment.custcollect.timeline.VerticalTimelineActivity">
+    tools:context="com.ly.cc.view.custcollect.timeline.VerticalTimelineActivity">
 
     <ListView
         android:id="@+id/lv_vertical_timeline"
