完成图像色彩变化的集成

--- a/app/src/main/res/layout/color_matrix.xml
+++ b/app/src/main/res/layout/color_matrix.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageview"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="2"
-        android:layout_height="0dp" />
+        android:padding="5dp" />
 
     <GridLayout
         android:id="@+id/group"
         android:layout_width="match_parent"
-        android:layout_weight="3"
         android:layout_height="0dp"
-        android:rowCount="4"
-        android:columnCount="5">
-    </GridLayout>
+        android:layout_gravity="center"
+        android:layout_weight="3"
+        android:columnCount="5"
+        android:padding="5dp"
+        android:rowCount="4"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,15 +30,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Change"
-            android:onClick="btnChange" />
+            android:onClick="btnChange"
+            android:text="Change" />
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Reset"
-            android:onClick="btnReset" />
+            android:onClick="btnReset"
+            android:text="Reset" />
     </LinearLayout>
 
 </LinearLayout>
