--- a/app/src/main/res/values/toggle_button_attrs.xml
+++ b/app/src/main/res/values/toggle_button_attrs.xml
@@ -6,6 +6,6 @@
         <attr name="offColor" format="reference|color"></attr>
         <attr name="onColor" format="reference|color"></attr>
         <attr name="spotColor" format="reference|color"></attr>
-        <attr name="animate" format="reference|boolean"></attr>
+        <attr name="animateTB" format="reference|boolean"></attr>
     </declare-styleable>
 </resources>
