完善播放功能 by VideoView ，按home键再次进入

--- a/app/src/main/res/layout/activity_play_video_by_video_view.xml
+++ b/app/src/main/res/layout/activity_play_video_by_video_view.xml
@@ -1,10 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#000000"
+    android:orientation="vertical">
 
     <VideoView
         android:id="@+id/vv_play_video"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
 </LinearLayout>
