--- a/app/src/main/res/layout/left_menu.xml
+++ b/app/src/main/res/layout/left_menu.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_margin="10dp"
-            android:drawableLeft="@drawable/ic_launcher"
+            android:drawableLeft="@mipmap/ic_launcher"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
             android:text="FFFFFFFFFF"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_margin="10dp"
-            android:drawableLeft="@drawable/ic_launcher"
+            android:drawableLeft="@mipmap/ic_launcher"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
             android:text="FFFFFFFFFF"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_margin="10dp"
-            android:drawableLeft="@drawable/ic_launcher"
+            android:drawableLeft="@mipmap/ic_launcher"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
             android:text="FFFFFFFFFF"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_margin="10dp"
-            android:drawableLeft="@drawable/ic_launcher"
+            android:drawableLeft="@mipmap/ic_launcher"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
             android:text="FFFFFFFFFF"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_margin="10dp"
-            android:drawableLeft="@drawable/ic_launcher"
+            android:drawableLeft="@mipmap/ic_launcher"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
             android:text="FFFFFFFFFF"
