--- a/app/src/main/res/layout/item_lv_vertical_timeline.xml
+++ b/app/src/main/res/layout/item_lv_vertical_timeline.xml
@@ -45,7 +45,7 @@
         <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/tv_content"
